[metadata]
name = stream2py
version = 1.0.9
url = https://github.com/i2mint/stream2py
platforms = any
description_file = README.md
description = Bring data streams to python with ease
license = mit
root_url = https://github.com/i2mint/
author = OtoSense
install_requires =
	opencv-python
	psutil
	PyAudio
	python-snap7

[options]
packages =
		stream2py
		stream2py.sources
		stream2py.utility
include_package_data = True
zip_safe = False

