[metadata]
name = stream2py
version = 1.0.24
url = https://github.com/i2mint/stream2py
root_url = https://github.com/i2mint
platforms = any
description = Bring data streams to python with ease
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
author = OtoSense
license = MIT
keywords =
    data stream
copyright =
		2021
		Otosense
display_name = Stream2py

[options]
packages = find:
include_package_data = True
zip_safe = False
